testing 1px blank border on mobile fix

--- a/test/stylate.css
+++ b/test/stylate.css
@@ -223,6 +223,7 @@ body, html
 .fullscreenheader
 {
 	margin: 0;
+	padding: 0;
 	position: absolute;
 	background-attachment: fixed;
 	height:100%;
@@ -235,7 +236,7 @@ body, html
 	position: fixed;
 	z-index: -2;
 	margin: 0;
-	padding: 100px;
+	padding: 0;
 	min-height:100vh;
 	min-width: 100vw;
 	background-attachment: fixed;
@@ -243,7 +244,6 @@ body, html
 	left: 50%;
 	transform: translate(-50%, -50%);
 	overflow: hidden;
-	background-color: #060606;
 }
 
 .centertext
